--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook"
+    "storybook": "start-storybook",
+    "eyes-storybook": "eyes-storybook" 
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "@applitools/eyes-storybook": "^3.2.3",
     "@babel/core": "^7.7.7",
     "@storybook/react": "^5.2.8",
     "babel-loader": "^8.0.6"
