--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@percy-io/percy-storybook": "^2.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -17,6 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook",
+    "snapshot": "build-storybook -s public && percy-storybook --widths=320,1280",
     "eyes-storybook": "eyes-storybook"
   },
   "eslintConfig": {
@@ -37,6 +39,7 @@
   "devDependencies": {
     "@applitools/eyes-storybook": "^3.2.3",
     "@babel/core": "^7.7.7",
+    "@percy/storybook": "^3.2.0",
     "@storybook/react": "^5.3.2",
     "babel-loader": "^8.0.6"
   }
