--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "ui-test": "build-storybook && react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook",
     "snapshot": "build-storybook -s public && percy-storybook --widths=320,1280",
@@ -42,6 +43,7 @@
     "@babel/core": "^7.7.7",
     "@percy/storybook": "^3.2.0",
     "@storybook/addon-storyshots": "^5.3.3",
+    "@storybook/addon-storyshots-puppeteer": "^5.3.3",
     "@storybook/react": "^5.3.2",
     "babel-loader": "^8.0.6",
     "react-test-renderer": "^16.12.0"
